unpackaged/main/default/objects/Resource__c/fields/CalendarSync__c.field-meta.xml
<CustomField>
    <fullName>CalendarSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Sync</label>
    <type>Checkbox</type>
</CustomField>