unpackaged/main/default/objects/Resource__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Teamcenter</fullName>
            </value>
            <value>
                <fullName>Solid Edge</fullName>
            </value>
            <value>
                <fullName>NX/CAM</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>COMOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>