unpackaged/main/default/objects/Resource__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>PLM</fullName>
            </value>
            <value>
                <fullName>Solid Edge</fullName>
            </value>
            <value>
                <fullName>COMOS</fullName>
            </value>
            <value>
                <fullName>iPLM</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>