unpackaged/main/default/objects/Resource__c/fields/EquipmentType__c.field-meta.xml
<CustomField>
    <fullName>EquipmentType__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>