unpackaged/main/default/objects/Resource__c/fields/IsMe__c.field-meta.xml
<CustomField>
    <fullName>IsMe__c</fullName>
    <formula>$User.Id = User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Me</label>
    <type>Checkbox</type>
</CustomField>