unpackaged/main/default/objects/Resource__c/listViews/AllPLM.listView-meta.xml
<ListView>
    <fullName>AllPLM</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Type__c</columns>
    <columns>Division__c</columns>
    <columns>Category__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>PLM,Solid Edge,COMOS</value>
    </filters>
    <label>All PLM Resources</label>
</ListView>