unpackaged/main/default/objects/Resource__c/listViews/AllSol.listView-meta.xml
<ListView>
    <fullName>AllSol</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Type__c</columns>
    <columns>Division__c</columns>
    <columns>SortOrder__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>IT,Data Services,iPLM,Autodesk,Dassault</value>
    </filters>
    <label>All Solutions Resources</label>
</ListView>